--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
 
 <body>
-    
+
     <div class="container"> 
         <h1> Psychic Game </h1>
-        <p> Guess what letter I'm thinking of </p>
+        <h4> Guess what letter I'm thinking of </h4>
         <p id = "wins"> Wins: </p>
         <p id = "losses"> Losses: </p>
         <p id = "left"> Guesses Left: </p>
