added sticky footer

--- a/index.html
+++ b/index.html
@@ -20,13 +20,23 @@
 <body>
 
     <div class="container"> 
-        <h1> Psychic Game </h1>
-        <h4> Guess what letter I'm thinking of </h4>
-        <p id = "wins"> Wins: </p>
-        <p id = "losses"> Losses: </p>
-        <p id = "left"> Guesses Left: </p>
-        <p id = "guesses"> Guesses so far: </p>
+        <div class="row">
+            <div class="col-6">
+            <h1> Psychic Game </h1>
+            <br>
+            <h4> Guess what letter I'm thinking of </h4>
+            <p id = "wins"> Wins: </p>
+            <p id = "losses"> Losses: </p>
+            <p id = "left"> Guesses Left: </p>
+            <p id = "guesses"> Guesses so far: </p>
+            </div>
+            <div class="col-6 fortuneTeller">
+            
+            </div>
+        </div>
     </div>
+
+    <div id="footer"></div>
 
     </body>
 
